syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "ChatService";

package chat;


message FromClientMessage {

  string text = 2;
}

message MessageAuthor {

  string id = 1;
  string name = 2;
}

message FromServerMessage {

    MessageAuthor author = 1;
    string text = 2;
    google.protobuf.Timestamp time = 3;
}


service ChatService {

  rpc SendMessage(FromClientMessage) returns (google.protobuf.Empty);

  rpc GetChatStream(google.protobuf.Empty) returns (stream FromServerMessage);
}